# api-server/openapi.yaml
@@ -6,11 +6,22 @@ info:
     title: ClusterService API
     version: 0.0.1
 paths:
-    /api/v1/clusters:
+    /api/v1/cluster:
         get:
             tags:
                 - ClusterService
             operationId: ClusterService_ListClusters
+            parameters:
+                - name: page.current
+                  in: query
+                  schema:
+                    type: integer
+                    format: uint32
+                - name: page.size
+                  in: query
+                  schema:
+                    type: integer
+                    format: uint32
             responses:
                 "200":
                     description: OK
@@ -18,20 +29,121 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/api.v1.cluster.ListClustersResponse'
+        post:
+            tags:
+                - ClusterService
+            operationId: ClusterService_CreateCluster
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/api.v1.cluster.Cluster'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content: {}
+    /api/v1/cluster/{id}:
+        get:
+            tags:
+                - ClusterService
+            operationId: ClusterService_GetCluster
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/api.v1.cluster.Cluster'
+        put:
+            tags:
+                - ClusterService
+            operationId: ClusterService_UpdateCluster
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/api.v1.cluster.Cluster'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content: {}
 components:
     schemas:
         api.v1.cluster.Cluster:
+            required:
+                - name
+                - address
+                - security
             type: object
             properties:
                 id:
+                    type: string
+                name:
+                    type: string
+                description:
+                    type: string
+                address:
+                    type: string
+                security:
+                    $ref: '#/components/schemas/api.v1.cluster.Cluster_Security'
+                createdAt:
                     readOnly: true
+                    type: string
+                    format: date-time
+                updatedAt:
+                    readOnly: true
+                    type: string
+                    format: date-time
+        api.v1.cluster.Cluster_Security:
+            required:
+                - type
+            type: object
+            properties:
+                type:
+                    type: integer
+                    format: enum
+                ca:
+                    type: string
+                cert:
+                    type: string
+                key:
+                    type: string
+                token:
                     type: string
         api.v1.cluster.ListClustersResponse:
             type: object
             properties:
-                clusters:
+                pagination:
+                    $ref: '#/components/schemas/api.v1.common.Pagination'
+                items:
                     type: array
                     items:
                         $ref: '#/components/schemas/api.v1.cluster.Cluster'
+        api.v1.common.Pagination:
+            type: object
+            properties:
+                current:
+                    type: integer
+                    format: uint32
+                size:
+                    type: integer
+                    format: uint32
+                total:
+                    type: integer
+                    format: uint32
 tags:
     - name: ClusterService
